--- a/libltdl/configure.ac
+++ b/libltdl/configure.ac
@@ -52,7 +52,7 @@ LT_CONFIG_LTDL_DIR([.]) # I am me!
 ## Automake Initialisation. ##
 ## ------------------------ ##
 
-AM_INIT_AUTOMAKE([gnits])
+AM_INIT_AUTOMAKE([gnu])
 
 
 ## ------------------------------- ##
