basename does not take a list of strings. * libltdl/config/ltmain.m4sh(func_extract_archives): Use sed $basename. * tests/darwin.at: New. Check that we can built fat program, shared library and convenience library. * Makefile.am: Add test. Reported by LiKai Liu <liulk@cs.bu.edu>

--- a/Makefile.am
+++ b/Makefile.am
@@ -465,7 +465,8 @@ TESTSUITE_AT	= tests/testsuite.at \
 		  tests/deplibs-ident.at \
 		  tests/configure-iface.at \
 		  tests/stresstest.at \
-		  tests/cmdline_wrap.at
+		  tests/cmdline_wrap.at \
+		  tests/darwin.at
 
 EXTRA_DIST     += $(srcdir)/$(TESTSUITE) $(TESTSUITE_AT) $(srcdir)/tests/package.m4
 
