Fix typo in Makefile.maint. * Makefile.maint (git-news): Renamed to check-news, since it doesn't actually run git.  Adjust all dependees.
Signed-off-by: Gary V. Vaughan <gary@gnu.org>

--- a/Makefile.maint
+++ b/Makefile.maint
@@ -149,11 +149,11 @@ fetch:
 GPG = gpg # set it to `:' to avoid gpg operations
 
 .PHONY: git-commit
-git-commit: git-news
+git-commit: check-news
 	cd $(srcdir) && $(SHELL) ./commit
 
 .PHONY: git-dist
-git-dist: git-news check-commit
+git-dist: check-news check-commit
 ## Build the distribution:
 	$(MAKE) distcheck
 ## Finally, if everything was successful, tag the release
