--- a/Makefile.am
+++ b/Makefile.am
@@ -466,6 +466,7 @@ TESTSUITE_AT	= tests/testsuite.at \
 		  tests/indirect_deps.at \
 		  tests/archive-in-archive.at \
 		  tests/execute-mode.at \
+		  tests/infer-tag.at \
 		  tests/localization.at \
 		  tests/install.at \
 		  tests/destdir.at \
