--- a/Makefile.am
+++ b/Makefile.am
@@ -477,6 +477,7 @@ TESTSUITE_AT	= tests/testsuite.at \
 		  tests/am-subdir.at \
 		  tests/lt_dlexit.at \
 		  tests/lt_dladvise.at \
+		  tests/lt_dlopen.at \
 		  tests/ltdl-api.at \
 		  tests/need_lib_prefix.at \
 		  tests/standalone.at \
