New test for lt_dlopenext error message.
* tests/lt_dlopenext.at (lt_dlopenext error messages): New file,
with new test, with sources taken from the Autobook example.
* Makefile.am: Update.

Signed-off-by: Ralf Wildenhues <Ralf.Wildenhues@gmx.de>

--- a/Makefile.am
+++ b/Makefile.am
@@ -478,6 +478,7 @@ TESTSUITE_AT	= tests/testsuite.at \
 		  tests/lt_dlexit.at \
 		  tests/lt_dladvise.at \
 		  tests/lt_dlopen.at \
+		  tests/lt_dlopenext.at \
 		  tests/ltdl-api.at \
 		  tests/need_lib_prefix.at \
 		  tests/standalone.at \
