--- a/Makefile.am
+++ b/Makefile.am
@@ -481,6 +481,7 @@ TESTSUITE_AT	= tests/testsuite.at \
 		  tests/lt_dlexit.at \
 		  tests/lt_dladvise.at \
 		  tests/lt_dlopen.at \
+		  tests/lt_dlopen_a.at \
 		  tests/lt_dlopenext.at \
 		  tests/ltdl-api.at \
 		  tests/need_lib_prefix.at \
