Testsuite exposure for relative output file names and deplibs.
* tests/deplib-in-subdir.at (deplib in subdir): New file, new
test.
* Makefile.am (TESTSUITE_AT): Update.
Prompted by report from Bob Friesenhahn.

Signed-off-by: Ralf Wildenhues <Ralf.Wildenhues@gmx.de>

--- a/Makefile.am
+++ b/Makefile.am
@@ -471,6 +471,7 @@ TESTSUITE_AT	= tests/testsuite.at \
 		  tests/execute-mode.at \
 		  tests/bindir.at \
 		  tests/cwrapper.at \
+		  tests/deplib-in-subdir.at \
 		  tests/infer-tag.at \
 		  tests/localization.at \
 		  tests/install.at \
