Ensure functions from resident modules work in atexit handlers.
* tests/resident.at (resident modules): New file, new test.
* Makefile.am (TESTSUITE_AT): Adjust.
Report by Bob Friesenhahn.

Signed-off-by: Ralf Wildenhues <Ralf.Wildenhues@gmx.de>

--- a/Makefile.am
+++ b/Makefile.am
@@ -486,6 +486,7 @@ TESTSUITE_AT	= tests/testsuite.at \
 		  tests/lt_dlopenext.at \
 		  tests/ltdl-api.at \
 		  tests/lalib-syntax.at \
+		  tests/resident.at \
 		  tests/slist.at \
 		  tests/need_lib_prefix.at \
 		  tests/standalone.at \
