Use --email with gendocs.sh.
* Makefile.maint (web-manual): Pass bug reporting address to
gendocs.sh.

Signed-off-by: Ralf Wildenhues <Ralf.Wildenhues@gmx.de>

--- a/Makefile.maint
+++ b/Makefile.maint
@@ -225,4 +225,4 @@ web-manual:
 	$(WGETSGO)'/texinfo/texinfo/util/gendocs.sh' && \
 	$(WGETSGO)'/texinfo/texinfo/util/gendocs_template' && \
 	chmod 755 gendocs.sh && \
-	./gendocs.sh libtool "GNU Libtool Manual"
+	./gendocs.sh --email bug-libtool@gnu.org libtool "GNU Libtool Manual"
