Provide an m4sh reimplementation of announce-gen.
* libltdl/config/getopt.m4sh (M4SH_GETOPTS): New macro that takes
a quoted m4 list of command line options to be parsed, and
generates the shell code to parse those options and collect the
results into appropriately named 'opt_xxx' shell variables.  Also,
add some private supporting macros, and improve the comments
radically.
* libltdl/config/announce-gen.m4sh: New file, to generate and
optionally post (an enhancement over the gnulib perl script of the
same name) a release announcement.
* Makefile.maint (announce-gen): Build a new announce-gen script
in the build directory, from the contents of
libltdl/config/announce-gen.m4sh.
* HACKING (Release Procedure): Update the instructions to use
announce-gen.
(Alpha release note template, Full release note template):
Removed.

Signed-off-by: Gary V. Vaughan <gary@gnu.org>

--- a/Makefile.maint
+++ b/Makefile.maint
@@ -48,6 +48,20 @@ $(srcdir)/commit: $(srcdir)/$(auxdir)/mailnotify clcommit.m4sh
 	mv -f commit.tmp commit; \
 	rm -f commit.in
 
+announce-gen: $(auxdir)/announce-gen.m4sh $(auxdir)/getopt.m4sh
+	$(timestamp); \
+	rm -f announce-gen announce-gen.in announce-gen.tmp; \
+	$(M4SH) -B $(top_srcdir)/$(auxdir) $(top_srcdir)/$(auxdir)/announce-gen.m4sh > announce-gen.in; \
+	input="announce-gen.m4sh"; \
+	$(edit) -e "s,@TIMESTAMP\@,$$TIMESTAMP,g" \
+		-e "s,@LASTRELEASE\@,$(LASTRELEASE),g" \
+		-e "s,@top_srcdir\@,$(top_srcdir),g" \
+		announce-gen.in > announce-gen.tmp; \
+	chmod a+x announce-gen.tmp; \
+	chmod a-w announce-gen.tmp; \
+	mv -f announce-gen.tmp announce-gen; \
+	rm -f announce-gen.in
+
 $(srcdir)/$(auxdir)/mailnotify: $(auxdir)/mailnotify.m4sh
 	$(timestamp); \
 	cd $(srcdir)/$(auxdir); \
