--- a/Makefile.maint
+++ b/Makefile.maint
@@ -121,6 +121,7 @@ check-news:
 WGET = wget
 WGETSGO = $(WGET) 'http://savannah.gnu.org/cgi-bin/viewcvs/~checkout~'
 WGET_GIT = $(WGET) 'http://git.savannah.gnu.org/gitweb/?a=blob_plain;hb=HEAD;p='
+WGET_CGIT = $(WGET) 'http://git.savannah.gnu.org/cgit/config.git/plain'
 
 ## Files that we fetch and which we compare against.
 ## FIXME should be a lot more here
@@ -140,8 +141,8 @@ fetch:
 	(cd Fetchdir && \
 	$(WGET_GIT)'gnulib.git;f=doc/INSTALL' -O INSTALL && \
 	$(WGET_GIT)'automake.git;f=lib/install-sh' -O install-sh && \
-	$(WGETSGO)/config/config/config.guess -O config.guess && \
-	$(WGETSGO)/config/config/config.sub -O config.sub && \
+	$(WGET_CGIT)/config.guess -O config.guess && \
+	$(WGET_CGIT)/config.sub -O config.sub && \
 	$(WGETSGO)/texinfo/texinfo/doc/texinfo.tex -O texinfo.tex )
 ## Don't exit after test because we want to give as many errors as
 ## possible.
